# AzureAIChat.Qt

./: .clang-format  CMakeLists.txt  README.md  main.cpp
src/: APIConfig.cpp  APIConfig.h  MessagesList.cpp  MessagesList.h  Settings.cpp  Settings.h  main.cpp
src/Network/: AzureAPIManager.cpp  AzureAPIManager.h
src/utils/: Global.cpp  Global.h  Singleton.cpp  Singleton.h
